--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
