--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
     "react": "^18",
     "react-dom": "^18",
