--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-image-gallery": "^1.3.0",
     "react-spinners": "^0.14.1",
+    "sass": "^1.78.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -45,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-gallery": "^1.2.4",
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8",
