--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-image-gallery": "^1.3.0",
     "react-spinners": "^0.14.1",
     "sass": "^1.78.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
