--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
